fixed the overflow scroll issue

--- a/src/app.scss
+++ b/src/app.scss
@@ -19,7 +19,6 @@ html {
     padding: 0;
     margin: 0;
     width: 100%;
-    overflow: hidden;
 }
 
 body {
