--- a/src/pages/learn/learn.scss
+++ b/src/pages/learn/learn.scss
@@ -11,7 +11,6 @@ hr {
 }
 
 html {
-    overflow: scroll;
     overflow-x: hidden;
 }
 
